--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,6 @@
 {
     "routes": [
       { "src": "/", "dest": "/" },
-      { "src": "/projetos", "dest": "/projetos" }
+      { "src": "/", "dest": "/projetos" }
     ]
   }
